fix models and db, working
