# docs/swagger.json
@@ -495,6 +495,9 @@
                 },
                 "pass": {
                     "type": "string"
+                },
+                "role": {
+                    "type": "string"
                 }
             }
         },
@@ -509,9 +512,6 @@
         "ds.Methane": {
             "type": "object",
             "properties": {
-                "admin": {
-                    "$ref": "#/definitions/ds.User"
-                },
                 "date_create": {
                     "type": "string"
                 },
@@ -524,14 +524,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "methane_yield": {
-                    "type": "number"
-                },
-                "moderator": {
-                    "$ref": "#/definitions/ds.User"
-                },
                 "name": {
                     "type": "string"
+                },
+                "professor": {
+                    "$ref": "#/definitions/ds.User"
                 },
                 "reagents": {
                     "type": "array",
@@ -539,19 +536,21 @@
                         "$ref": "#/definitions/ds.MethaneReagent"
                     }
                 },
+                "researcher": {
+                    "$ref": "#/definitions/ds.User"
+                },
                 "status": {
                     "type": "string"
-                },
-                "temperature": {
-                    "type": "number"
                 }
             }
         },
         "ds.MethaneReagent": {
             "type": "object",
             "properties": {
+                "methane_yield": {
+                    "type": "number"
+                },
                 "quantity": {
-                    "description": "Дополнительные поля м-м",
                     "type": "number"
                 }
             }
@@ -571,11 +570,11 @@
                 "img": {
                     "type": "string"
                 },
-                "molar_mass": {
-                    "type": "number"
-                },
                 "name": {
                     "type": "string"
+                },
+                "temperature": {
+                    "type": "number"
                 },
                 "video": {
                     "type": "string"
@@ -585,17 +584,23 @@
         "ds.User": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "is_professor": {
+                    "type": "boolean"
                 },
                 "login": {
                     "type": "string"
                 },
-                "name": {
-                    "type": "string"
-                },
                 "role": {
                     "$ref": "#/definitions/role.Role"
+                },
+                "username": {
+                    "type": "string"
                 },
                 "uuid": {
                     "type": "string"
@@ -603,25 +608,15 @@
             }
         },
         "role.Role": {
-            "type": "integer",
+            "type": "string",
             "enum": [
-                0,
-                1,
-                2
-            ],
-            "x-enum-comments": {
-                "Admin": "2",
-                "Manager": "1",
-                "Researcher": "0"
-            },
-            "x-enum-descriptions": [
-                "0",
-                "1",
-                "2"
+                "researcher",
+                "professor",
+                "admin"
             ],
             "x-enum-varnames": [
                 "Researcher",
-                "Manager",
+                "Professor",
                 "Admin"
             ]
         }
